# backend/internal/api/routes/users/handlers.go
@@ -9,6 +9,7 @@ import (
 	"log/slog"
 	"net/http"
 	"strconv"
+	"time"
 
 	"github.com/go-playground/validator/v10"
 	"github.com/jackc/pgx/v5"
@@ -186,7 +187,7 @@ func HandleUserLogin(w http.ResponseWriter, r *http.Request) {
 
 	// Create access token
 	env.Logger.DebugContext(ctx, "Generating access token")
-	accessToken, err := token.CreateAccessToken(jwt.JWTParams{
+	accessToken, err := token.NewAccessToken(jwt.JWTParams{
 		Role:   role.DBToRole(user.Role),
 		UserID: fmt.Sprintf("%d", user.ID),
 	}, env)
@@ -198,7 +199,7 @@ func HandleUserLogin(w http.ResponseWriter, r *http.Request) {
 
 	// Create refresh token
 	env.Logger.DebugContext(ctx, "Generating refresh token")
-	refreshToken, err := token.CreateRefreshToken(strconv.FormatInt(user.ID, 10))
+	refreshToken, err := token.NewRefreshToken(user.ID)
 	if err != nil {
 		env.Logger.ErrorContext(ctx, "failed to create refresh token", slog.Any("error", err))
 		_ = apiError.EncodeInternalError(w, requestID)
@@ -227,4 +228,134 @@ func HandleUserLogin(w http.ResponseWriter, r *http.Request) {
 	env.Logger.DebugContext(ctx, "Writing response")
 	http.SetCookie(w, token.NewAccessTokenCookie(accessToken, env))
 	http.SetCookie(w, token.NewRefreshTokenCookie(refreshToken, env))
+}
+
+// HandleRefreshSession godoc
+//
+//	@Summary	Refresh user session
+//
+//	@Tags		User
+//
+//	@Param		Cookie	header	string	true	"Cookie header: refresh_token=..."
+//
+//	@Success	200
+//	@Failure	401	{object}	apiError.Error	"Unauthorized"
+//	@Router		/api/session [POST]
+func HandleRefreshSession(w http.ResponseWriter, r *http.Request) {
+	ctx := r.Context()
+	env := env.EnvFromCtx(ctx)
+	requestID := strconv.FormatUint(requestid.ExtractRequestID(ctx), 10)
+
+	// Extract refresh token
+	env.Logger.DebugContext(ctx, "Extracting refresh token")
+	cookie, err := r.Cookie(token.RefreshTokenName(env))
+	if errors.Is(err, http.ErrNoCookie) {
+		env.Logger.ErrorContext(ctx, "refresh token not found", slog.Any("error", err))
+		_ = apiError.EncodeError(w, apiError.MissingCredentials, "refresh token not found", requestID)
+		return
+	}
+
+	// Extract UserID from refresh token
+	env.Logger.DebugContext(ctx, "Extracting user id from refresh token")
+	userID, err := token.ExtractUserIDFromRefreshToken(cookie.Value)
+	if err != nil {
+		env.Logger.ErrorContext(ctx, "failed to extract user id from refresh token", slog.Any("error", err))
+		_ = apiError.EncodeError(w, apiError.InvalidCredentials, "malformed refresh token", requestID)
+		return
+	}
+
+	// Retrieve true refresh token
+	env.Logger.DebugContext(ctx, "Fetching true refresh token")
+	refresh, err := env.Database.GetUserRefreshTokenHash(ctx, userID)
+	if errors.Is(err, pgx.ErrNoRows) {
+		env.Logger.ErrorContext(ctx, "no user with given id", slog.Int64("user-id", userID), slog.Any("error", err))
+		_ = apiError.EncodeError(w, apiError.InvalidCredentials, "invalid refresh token", requestID)
+	} else if err != nil {
+		env.Logger.ErrorContext(ctx, "failed to get user refresh hash", slog.Any("error", err))
+		_ = apiError.EncodeInternalError(w, requestID)
+		return
+	}
+	if time.Now().After(refresh.RefreshTokenExpiresAt.Time) {
+		env.Logger.ErrorContext(ctx, "refresh token is expired")
+		_ = apiError.EncodeError(w, apiError.InvalidCredentials, "invalid refresh token", requestID)
+		return
+	}
+
+	// Decode true hash
+	env.Logger.DebugContext(ctx, "Decoding true refresh token hash")
+	argonParams, argonSalt, trueRefreshHash, err := argon2id.DecodeHash(refresh.RefreshTokenHash.String)
+	if err != nil {
+		env.Logger.ErrorContext(ctx, "failed to decode hash", slog.Any("error", err))
+		_ = apiError.EncodeInternalError(w, requestID)
+		return
+	}
+
+	// Hash given refresh token
+	env.Logger.DebugContext(ctx, "Encoding given refresh token")
+	givenHash := argon2id.EncodeHashWithSalt(cookie.Value, *argonParams, argonSalt)
+
+	// Compare refresh tokens
+	env.Logger.DebugContext(ctx, "Comparing tokens")
+	if subtle.ConstantTimeCompare(trueRefreshHash, []byte(givenHash)) != 0 {
+		env.Logger.ErrorContext(ctx, "tokens do not match")
+		_ = apiError.EncodeError(w, apiError.InvalidCredentials, "invalid refresh token", requestID)
+		return
+	}
+	env.Logger.DebugContext(ctx, "tokens match!")
+
+	// Create new refresh token
+	env.Logger.DebugContext(ctx, "creating new refresh token")
+	newRefreshToken, err := token.NewRefreshToken(userID)
+	if err != nil {
+		env.Logger.ErrorContext(ctx, "failed to create refresh token", slog.Any("error", err))
+		_ = apiError.EncodeInternalError(w, requestID)
+		return
+	}
+
+	// Update refresh token
+	env.Logger.DebugContext(ctx, "Updating refresh token")
+	newRefreshTokenHash, err := argon2id.EncodeHash(newRefreshToken, argon2id.DefaultParams)
+	if err != nil {
+		env.Logger.ErrorContext(ctx, "failed to hash refresh token", slog.Any("error", err))
+		_ = apiError.EncodeInternalError(w, requestID)
+		return
+	}
+	err = env.Database.UpdateUserRefreshTokenHash(ctx, database.UpdateUserRefreshTokenHashParams{
+		RefreshTokenHash: pgtype.Text{
+			String: newRefreshTokenHash,
+			Valid:  true,
+		},
+		ID: userID,
+	})
+	if err != nil {
+		env.Logger.ErrorContext(ctx, "failed to update refresh token hash", slog.Any("error", err))
+		_ = apiError.EncodeInternalError(w, requestID)
+		return
+	}
+
+	// Get user role
+	env.Logger.DebugContext(ctx, "Getting user role")
+	userRole, err := env.Database.GetUserRole(ctx, userID)
+	if err != nil {
+		env.Logger.ErrorContext(ctx, "failed to get user role", slog.Any("error", err))
+		_ = apiError.EncodeInternalError(w, requestID)
+		return
+	}
+
+	// Generate access token
+	env.Logger.DebugContext(ctx, "Generating access token")
+	accessToken, err := token.NewAccessToken(jwt.JWTParams{
+		Role:   role.DBToRole(userRole),
+		UserID: fmt.Sprintf("%d", userID),
+	}, env)
+	if err != nil {
+		env.Logger.ErrorContext(ctx, "failed to generate access token", slog.Any("error", err))
+		_ = apiError.EncodeInternalError(w, requestID)
+		return
+	}
+
+	// Write response
+	env.Logger.DebugContext(ctx, "Writing response")
+	http.SetCookie(w, token.NewAccessTokenCookie(accessToken, env))
+	http.SetCookie(w, token.NewRefreshTokenCookie(newRefreshToken, env))
 }
